dropdown caret vertical alignment fix

--- a/src/client/scss/App.scss
+++ b/src/client/scss/App.scss
@@ -8,6 +8,9 @@
 $border-radius: .15rem !default;
 $border-radius-lg: .2rem !default;
 $border-radius-sm: .1rem !default;
+
+$caret-vertical-align: 0.175em !default;
+
 $warning: #f19b65 !default;
 $danger: #e31f31 !default;
 $success: #127b8b !default;
@@ -38,9 +41,11 @@ aside {
 .fs-2 {
   font-size: 2rem !important;
 }
-.bg-dark-trans{
+
+.bg-dark-trans {
   background-color: #151520d6;
 }
+
 @include media-breakpoint-up(md) {
   aside .list-group {
     max-height: calc(100vh - 12rem);
@@ -79,7 +84,7 @@ select#select-match {
     overflow-y: auto;
     overflow-x: hidden;
 
-    .list-group-item{
+    .list-group-item {
       width: 50%;
     }
   }
